--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-PORT = 4000
+PORT = 8080
+MONGO_URI = mongodb+srv://admin:admin@livechatappdb.qvrv2gt.mongodb.net/?retryWrites=true&w=majority&appName=LiveChatAppDb
