--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-async-handler": "^1.2.0",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1"
   }
