--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 8080
 MONGO_URI = mongodb+srv://admin:admin@livechatappdb.qvrv2gt.mongodb.net/?retryWrites=true&w=majority&appName=LiveChatAppDb
+JWT_SECRET = kraken069
